--- a/GAssist/MainPage.xaml
+++ b/GAssist/MainPage.xaml
@@ -1,28 +1,55 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<cui:CirclePage
+
+<cui:IndexPage
     x:Class="GAssist.MainPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:cui="clr-namespace:Tizen.Wearable.CircularUI.Forms;assembly=Tizen.Wearable.CircularUI.Forms"
-    RotaryFocusObject="{x:Reference ScrollView}">
-    <AbsoluteLayout>
-        <cui:CircleScrollView
-            x:Name="ScrollView"
-            AbsoluteLayout.LayoutBounds="0.5,30,0.8,1"
-            AbsoluteLayout.LayoutFlags="XProportional,SizeProportional">
+    xmlns:local="clr-namespace:GAssist;assembly=GAssist">
 
-            <Label
-                x:Name="label"
-                FontSize="Small"
-                FormattedText="{Binding Text}"
-                HorizontalTextAlignment="Center"
-                VerticalTextAlignment="Center" />
+    <cui:CirclePage
+        x:Name="Test"
+        BindingContext="local:"
+        RotaryFocusObject="{x:Reference ScrollView}">
+        <AbsoluteLayout>
+            <cui:CircleScrollView
+                x:Name="ScrollView"
+                AbsoluteLayout.LayoutBounds="0.5,30,0.8,1"
+                AbsoluteLayout.LayoutFlags="XProportional,SizeProportional">
+
+                <Label
+                    x:Name="Label"
+                    FontSize="Small"
+                    HorizontalTextAlignment="Center"
+                    VerticalTextAlignment="Center" />
+            </cui:CircleScrollView>
+        </AbsoluteLayout>
+        <cui:CirclePage.ActionButton>
+            <cui:ActionButtonItem
+                x:Name="ActionButtonItem"
+                BackgroundColor="Default"
+                Text="Listen" />
+        </cui:CirclePage.ActionButton>
+    </cui:CirclePage>
+    <cui:CirclePage RotaryFocusObject="{x:Reference MyScroller}">
+        <cui:CircleScrollView x:Name="MyScroller" Orientation="Vertical">
+            <StackLayout Orientation="Vertical">
+                <Label HorizontalOptions="CenterAndExpand" Text="Auto Listen on Resume" />
+                <cui:Check
+                    x:Name="Check"
+                    DisplayStyle="Onoff"
+                    HorizontalOptions="CenterAndExpand" />
+                <Label HorizontalOptions="CenterAndExpand" Text="Placeholder - Future options" />
+                <cui:Check
+                    x:Name="Placeholder"
+                    DisplayStyle="Onoff"
+                    HorizontalOptions="CenterAndExpand" />
+                <Label HorizontalOptions="CenterAndExpand" Text="Placeholder - Future options" />
+                <cui:Check
+                    x:Name="Placeholder2"
+                    DisplayStyle="Onoff"
+                    HorizontalOptions="CenterAndExpand" />
+            </StackLayout>
         </cui:CircleScrollView>
-    </AbsoluteLayout>
-    <cui:CirclePage.ActionButton>
-        <cui:ActionButtonItem
-            x:Name="actionButton"
-            BackgroundColor="Default"
-            Text="Listen" />
-    </cui:CirclePage.ActionButton>
-</cui:CirclePage>
+    </cui:CirclePage>
+</cui:IndexPage>
