--- a/GAssist/MainPage.xaml
+++ b/GAssist/MainPage.xaml
@@ -5,18 +5,15 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:cui="clr-namespace:Tizen.Wearable.CircularUI.Forms;assembly=Tizen.Wearable.CircularUI.Forms"
-    xmlns:local="clr-namespace:GAssist;assembly=GAssist">
+    xmlns:local="clr-namespace:GAssist;assembly=GAssist"
+    xmlns:sys="clr-namespace:System;assembly=netstandard">
 
-    <cui:CirclePage
-        x:Name="Test"
-        BindingContext="local:"
-        RotaryFocusObject="{x:Reference ScrollView}">
+    <cui:CirclePage x:Name="Test" RotaryFocusObject="{x:Reference ScrollView}">
         <AbsoluteLayout>
             <cui:CircleScrollView
                 x:Name="ScrollView"
                 AbsoluteLayout.LayoutBounds="0.5,0,0.8,1"
                 AbsoluteLayout.LayoutFlags="XProportional,SizeProportional">
-
                 <Label
                     x:Name="Label"
                     FontSize="Small"
@@ -31,25 +28,32 @@
                 Text="Listen" />
         </cui:CirclePage.ActionButton>
     </cui:CirclePage>
-    <cui:CirclePage RotaryFocusObject="{x:Reference MyScroller}">
-        <cui:CircleScrollView x:Name="MyScroller" Orientation="Vertical">
-            <StackLayout Orientation="Vertical">
-                <Label HorizontalOptions="CenterAndExpand" Text="Auto Listen on Resume" />
-                <cui:Check
-                    x:Name="Check"
-                    DisplayStyle="Onoff"
-                    HorizontalOptions="CenterAndExpand" />
-                <Label HorizontalOptions="CenterAndExpand" Text="Placeholder - Future options" />
-                <cui:Check
-                    x:Name="Placeholder"
-                    DisplayStyle="Onoff"
-                    HorizontalOptions="CenterAndExpand" />
-                <Label HorizontalOptions="CenterAndExpand" Text="Placeholder - Future options" />
-                <cui:Check
-                    x:Name="Placeholder2"
-                    DisplayStyle="Onoff"
-                    HorizontalOptions="CenterAndExpand" />
-            </StackLayout>
-        </cui:CircleScrollView>
+    <cui:CirclePage
+        x:Name="SettingsPage"
+        BindingContext="local:"
+        RotaryFocusObject="{x:Reference MyScroller}">
+        <cui:CircleListView x:Name="MyScroller" HorizontalOptions="CenterAndExpand">
+            <cui:CircleListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <StackLayout
+                            HorizontalOptions="Center"
+                            Orientation="Horizontal"
+                            VerticalOptions="Center">
+                            <Label
+                                FontSize="Micro"
+                                HorizontalOptions="CenterAndExpand"
+                                Text="{Binding Text}"
+                                VerticalOptions="Center" />
+                            <cui:Check
+                                DisplayStyle="Onoff"
+                                HorizontalOptions="Center"
+                                IsToggled="{Binding IsToggled}"
+                                VerticalOptions="Center" />
+                        </StackLayout>
+                    </ViewCell>
+                </DataTemplate>
+            </cui:CircleListView.ItemTemplate>
+        </cui:CircleListView>
     </cui:CirclePage>
 </cui:IndexPage>
